# Growth-AI

./: .gitignore  Makefile  README (1).md  README.md  docker-compose.yml  requirements.txt
contracts/: topics.yaml
contracts/examples/: action_applied.json  action_proposed.json  ad_event.json  alert_raised.json  kpi_update.json  policy_updated.json
contracts/python/: pyproject.toml
contracts/python/growthpilot_contracts/: __init__.py  actions.py  ad_event.py  alert.py  envelope.py  kpi_update.py  policy.py
contracts/schemas/: action_applied.schema.json  action_proposed.schema.json  ad_event.schema.json  alert_raised.schema.json  envelope.schema.json  kpi_update.schema.json  policy_updated.schema.json
infra/postgres/: init.sql
infra/postgres/migrations/: 0001_init.sql  0002_rollups.sql  0003_actions_outcomes.sql  0004_lightdash_views.sql
infra/stream/redpanda/: README.md  create-topics.ps1
scripts/: apply-migrations.ps1  dev-down.ps1  dev-up.ps1  reset-db.ps1  seed-demo.ps1  smoke-test.ps1
services/evaluator-service/: Dockerfile  pyproject.toml
services/evaluator-service/app/: bandit.py  bucketing.py  main.py  repository.py  reward.py  scheduler.py  voice.py
services/executor-service/: Dockerfile  pyproject.toml
services/executor-service/app/: action_router.py  guardrails.py  main.py  repository.py
services/executor-service/app/adapters/: google_adapter.py  meta_adapter.py  simulator_adapter.py
services/ingestion-service/: Dockerfile  README.md  pyproject.toml
services/ingestion-service/app/: main.py  normalizer.py  repository.py  validators.py
services/kpi-service/: Dockerfile  README.md  pyproject.toml
services/kpi-service/app/: alerts.py  anomaly.py  main.py  repository.py  rollups.py
services/orchestrator-service/: Dockerfile  pyproject.toml
services/orchestrator-service/app/: main.py
services/orchestrator-service/app/agents/: airia_client.py  policy.py
services/orchestrator-service/app/workflows/: autopilot.yaml
services/simulator-service/: Dockerfile  README.md  pyproject.toml
services/simulator-service/app/: api.py  generator.py  main.py  world.py
services/simulator-service/app/scenarios/: cpa_spike.json  creative_fatigue.json  roas_drop.json
shared/python/: pyproject.toml
shared/python/growthpilot_shared/: __init__.py  config.py  datadog.py  db.py  idempotency.py  logging.py  stream.py  time_windows.py  tracing.py
tests/contract-test/: pydantic_smoke.py  validate_examples.py  validate_schemas.py
